introducting 'static' list widgets that construct their listitems just once. off-screen rendering of list items; fixed abstract-action.js to not force refresh but respect changed items; added demo;

--- a/resources/demo.css
+++ b/resources/demo.css
@@ -3,6 +3,7 @@
 @font-face {
     font-family: "Kimberley";
     src: url(../resources/fonts/Montserrat/Montserrat-Light.ttf) format("truetype");
+    font-display:swap;
 }
 
 a, a:link, a:visited {
